--- a/Fuso/views/layout.jade
+++ b/Fuso/views/layout.jade
@@ -9,6 +9,8 @@ html
 
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js")
     script(type="text/javascript", src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0")
+    script(type='text/javascript', src='/javascripts/street.js')
+    script(type='text/javascript', src='/javascripts/intersection.js')
     script(type='text/javascript', src='/javascripts/map.js')
     script(type='text/javascript', src='/javascripts/ai.js')
   body
