--- a/Fuso/views/layout.jade
+++ b/Fuso/views/layout.jade
@@ -8,9 +8,9 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
 
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js")
-    script(type="text/javascript", src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0")
     script(type='text/javascript', src='/javascripts/street.js')
     script(type='text/javascript', src='/javascripts/intersection.js')
+    script(type='text/javascript', src='/javascripts/trafficmap.js')
     script(type='text/javascript', src='/javascripts/map.js')
     script(type='text/javascript', src='/javascripts/ai.js')
   body
