--- a/Fuso/views/layout.jade
+++ b/Fuso/views/layout.jade
@@ -11,6 +11,7 @@ html
     script(type='text/javascript', src='/javascripts/street.js')
     script(type='text/javascript', src='/javascripts/intersection.js')
     script(type='text/javascript', src='/javascripts/trafficmap.js')
+    script(type='text/javascript', src='/javascripts/stats.js')
     script(type='text/javascript', src='/javascripts/map.js')
     script(type='text/javascript', src='/javascripts/ai.js')
   body
